# mxtasking-tunadb

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: .gitignore
scripts/: FindAVX2.cmake  FindRTM.cmake
sql/: load_tpch.sql  tpch-schema.sql  tpch-update-statistics.sql
src/application/blinktree_benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.cpp  request_scheduler.h
src/application/hello_world/: CMakeLists.txt  main.cpp
src/application/print_core_set/: CMakeLists.txt  main.cpp
src/application/radix_join_benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  config.h  hash_table.h  main.cpp  partitions.h  task.h  tuple.h
src/application/tunadb/: CMakeLists.txt  main.cpp  udf.cpp  udf.h
src/benchmark/: CMakeLists.txt  chronometer.h  cores.cpp  cores.h  easy_clock.h  workload_set.cpp
src/db/: CMakeLists.txt  README.md  config.h
src/db/data/: CMakeLists.txt  pax_record_view.h  pax_tile.h  row_record_view.h  row_tile.h  tile_type.h  value.cpp  value.h
src/db/exception/: abstract_exception.h  execution_exception.h  parser_exception.h  plan_exception.h
src/db/execution/: CMakeLists.txt  gather_result_node.cpp  gather_result_node.h  memory_tracing_node.h  operator_interface.h  record_token.h  scan_generator.h  tile_mask.h
src/db/expression/: CMakeLists.txt  annotation.h  attribute.h  limit.h  operation.cpp  operation.h  operation_builder.h  order_by.h  term.h
src/db/io/: CMakeLists.txt  abstract_client.cpp  abstract_client.h  client_handler.h  query_result.cpp  query_result.h
src/db/network/: CMakeLists.txt  client.cpp  client.h  config.h
src/db/parser/: .gitignore  CMakeLists.txt  driver.cpp  driver.h  node.h  node_interface.h  parser.yy  scanner.hpp  scanner.ll  sql_parser.cpp  sql_parser.h
src/db/plan/: CMakeLists.txt
src/db/statistic/: CMakeLists.txt  count_distinct_hyperloglog.h  count_distinct_sketch.h  equi_depth_histogram.cpp  equi_depth_histogram.h  histogram.h  singleton_histogram.h  statistics.h
src/db/storage/: CMakeLists.txt  serializer.cpp  serializer.h
src/db/type/: bool.h  (+6 more)
src/flounder/: CMakeLists.txt  README.md  annotation.h  annotations.h  comparator.cpp  comparator.h  debug.h  exception.h  executable.h  instruction_set.h  jit_profiling_api.h  lib.cpp  lib.h  program.cpp  program.h  statement.h  string.cpp  string.h
src/flounder/abi/: x86_64.h
src/flounder/compilation/: compilate.h  compiler.cpp  compiler.h  register_allocator.cpp  register_allocator.h  register_assigner.cpp  register_assigner.h  translator.cpp  translator.h
src/flounder/ir/: condition.h  constant.h  instructions.h  label.h  memory.h  operand.h  register.h
src/flounder/optimization/: analyzer.cpp  analyzer.h  cycle_estimator.cpp  cycle_estimator.h  move_unlikely_branches_optimization.cpp  move_unlikely_branches_optimization.h  optimization_interface.h  optimizer.cpp  optimizer.h
src/mx/: CMakeLists.txt  README.md
src/mx/io/network/: config.h  server.cpp  server.h
src/mx/memory/: config.h  dynamic_size_allocator.cpp  dynamic_size_allocator.h  fixed_size_allocator.h  global_heap.h  tagged_ptr.h  task_allocator_interface.h  worker_local_dynamic_size_allocator.cpp  worker_local_dynamic_size_allocator.h
src/mx/memory/reclamation/: epoch_manager.cpp  epoch_manager.h
src/mx/queue/: bound_mpmc.h  dynamic_ringpuffer.h  list.h  mpsc.h  priority_queue.h
src/mx/resource/: annotation.h  builder.cpp  builder.h  ptr.h  resource_interface.h
src/mx/synchronization/: memory_transaction.h  optimistic_lock.h  primitive_matrix.h  rw_spinlock.h  spinlock.h  synchronization.h
src/mx/system/: builtin.h  cache.h  cpu.cpp  cpu.h  environment.h  rdtscp.h  thread.h
src/mx/tasking/: README.md  annotation.h  config.h  load.h  prefetch_descriptor.h  prefetch_distance.h  prefetch_slot.cpp  prefetch_slot.h  priority.h  runtime.h  scheduler.cpp  scheduler.h  shared_task_queue.h  task.cpp  task.h  task_buffer.h  task_cycle_sampler.h  task_execution_time_history.h  task_pool.h  task_pool_occupancy.h  task_queues.h  task_squad.cpp  task_squad.h  task_stack.h  worker.cpp  worker.h
src/mx/tasking/dataflow/: annotation.h  barrier_task.h  finalize_counter.h  graph.h  node.h  pipeline.h  producer.h  task_node.h  token.h  token_generator.h
src/mx/tasking/profiling/: idle_profiler.cpp  idle_profiler.h  task_counter.h  task_tracer.cpp  task_tracer.h  time.cpp  time.h
src/mx/util/: aligned_t.h  core_set.cpp  core_set.h  fluid_stack.h  logger.h  reference_counter.h  split_counter.h
src/perf/: CMakeLists.txt  README.md  counter.cpp  counter.h  counter_description.cpp  counter_description.h  jit_map.cpp  jit_map.h  sample.cpp  sample.h
test/: CMakeLists.txt
test/db/data/: record_view.test.cpp
test/db/topology/: physical_schema.test.cpp
test/mx/memory/: fixed_size_allocator.test.cpp  worker_local_dynamic_size_allocator.test.cpp
test/mx/queue/: list.test.cpp  mpmc.test.cpp  mpsc.test.cpp  queue_item.h
test/mx/tasking/prefetching/: prefetch_list.cpp
test/mx/util/: core_set.test.cpp
workloads_specification/: workloada
(+236 files in other folders)
